--- a/pom.xml
+++ b/pom.xml
@@ -50,9 +50,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.sillelien.dollar</groupId>
+            <groupId>me.neilellis</groupId>
             <artifactId>dollar-core</artifactId>
-            <version>0.1.5</version>
+            <version>0.1.4-r938</version>
         </dependency>
 
         <dependency>
@@ -83,7 +83,14 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+        <repository>
+        <snapshots>
+            <enabled>true</enabled>
+        </snapshots>
+        <id>bintray.central</id>
+        <name>bintray</name>
+        <url>http://dl.bintray.com/neilellis/maven</url>
+    </repository>
     </repositories>
-
 
 </project>
