--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,13 @@
                 </executions>
             </plugin>
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>org.springframework.build</groupId>
+                <artifactId>aws-maven</artifactId>
+                <version>5.0.0.RELEASE</version>
+            </extension>
+        </extensions>
     </build>
 
     <repositories>
@@ -150,6 +157,17 @@
             <url>http://dl.bintray.com/neilellis/maven</url>
         </repository>
     </repositories>
-
+    <distributionManagement>
+        <repository>
+            <id>aws-release</id>
+            <name>AWS Release Repository</name>
+            <url>s3://sillelien-maven-repo/release</url>
+        </repository>
+        <snapshotRepository>
+            <id>aws-snapshot</id>
+            <name>AWS Snapshot Repository</name>
+            <url>s3://sillelien-maven-repo/snapshot</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
