--- a/circle.yml
+++ b/circle.yml
@@ -1,15 +1,15 @@
 machine:
   java:
     version: oraclejdk8
-
-production:
-    branch: master
-    commands:
-      - git config --global user.email "hello@neilellis.me"
-      - git config --global user.name "Neil Ellis"
-      - mvn versions:set -DnewVersion=0.${CIRCLE_BUILD_NUM}
-      - mvn versions:resolve-ranges
-      - mvn versions:lock-snapshots
+deployment:
+  production:
+      branch: master
+      commands:
+        - git config --global user.email "hello@neilellis.me"
+        - git config --global user.name "Neil Ellis"
+        - mvn versions:set -DnewVersion=0.${CIRCLE_BUILD_NUM}
+        - mvn versions:resolve-ranges
+        - mvn versions:lock-snapshots
 #        - mvn versions:commit
-      - mvn -T 1C -Dmaven.test.skip=true -Drat.skip=true -DskipEnforcer -Dmaven.javadoc.skip=true -DgenerateReports=false package
-      - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} -T 2C deploy
+        - mvn -T 1C -Dmaven.test.skip=true -Drat.skip=true -DskipEnforcer -Dmaven.javadoc.skip=true -DgenerateReports=false package
+        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} -T 2C deploy
