--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,8 @@
 machine:
+  environment:
+    release: 0.0.${CIRCLE_BUILD_NUM}
+    MAVEN_OPTS: "-Xmx1g -DbuildNumber=${CIRCLE_BUILD_NUM} "
+
   java:
     version: oraclejdk8
 
@@ -15,7 +19,7 @@ deployment:
         - git merge staging -m "Auto merge"
         - git push
         - 'git commit -a -m "Promotion from staging" || :'
-        - "git tag 0.${CIRCLE_BUILD_NUM} || :"
+        - "git tag ${release} || :"
         - git push --tags
         - git push origin master
 
@@ -24,7 +28,7 @@ deployment:
       commands:
         - git config --global user.email "hello@neilellis.me"
         - git config --global user.name "Neil Ellis"
-        - mvn versions:set -DnewVersion=0.${CIRCLE_BUILD_NUM}
+        - mvn versions:set -DnewVersion=${release}
         - mvn versions:resolve-ranges
         - mvn versions:lock-snapshots
 #        - mvn versions:commit
