--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>sillelien</groupId>
+    <groupId>com.sillelien</groupId>
     <artifactId>tutum-api</artifactId>
-    <version>latest</version>
+    <version>0-SNAPSHOT</version>
 
     <dependencies>
 
@@ -49,9 +49,9 @@
         </dependency>
 
         <dependency>
-            <groupId>sillelien</groupId>
+            <groupId>com.sillelien</groupId>
             <artifactId>dollar-core</artifactId>
-            <version>0.1.40</version>
+            <version>0.1.44</version>
         </dependency>
 
         <dependency>
@@ -143,20 +143,7 @@
         </extensions>
     </build>
 
-    <repositories>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-        <repository>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <id>bintray.central</id>
-            <name>bintray</name>
-            <url>http://dl.bintray.com/neilellis/maven</url>
-        </repository>
-    </repositories>
+
     <distributionManagement>
         <repository>
             <id>aws-release</id>
