--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,8 @@ deployment:
         - git merge staging -m "Auto merge"
         - git push
         - echo ${release} > .release
+        - envsubst < README.md > README.expanded
+        - mv README.expanded README.md
         - 'git commit -a -m "Promotion from staging" || :'
         - "git tag ${release} || :"
         - git push --tags
