--- a/circle.yml
+++ b/circle.yml
@@ -28,3 +28,5 @@ deployment:
 #        - mvn versions:commit
         - mvn -T 1C -Dmaven.test.skip=true -Drat.skip=true -DskipEnforcer -Dmaven.javadoc.skip=true -DgenerateReports=false package
         - mvn -T 2C -Dmaven.test.skip=true -Drat.skip=true -DskipEnforcer -Dmaven.javadoc.skip=true -DgenerateReports=false deploy
+        - envsubst < settings.xml > ~/.m2/settings.xml
+        - mvn -T 2C site
