--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,8 @@ machine:
 dependencies:
   pre:
     - cd ~ && git clone https://github.com/sillelien/build-utils.git && chmod a+x ~/build-utils/*.sh
+    - "[[ ${CIRCLE_BRANCH} != 'master' ]] || ( mvn versions:set -DnewVersion=$(cat .release) && mvn versions:resolve-ranges && mvn versions:lock-snapshots )"
+    - mvn -T 1C -Dmaven.test.skip=true -Drat.skip=true -DskipEnforcer -Dmaven.javadoc.skip=true -DgenerateReports=false install
 
 
 deployment:
@@ -22,11 +24,6 @@ deployment:
       commands:
         - git config --global user.email "hello@neilellis.me"
         - git config --global user.name "Neil Ellis"
-        - mvn versions:set -DnewVersion=$(cat .release)
-        - mvn versions:resolve-ranges
-        - mvn versions:lock-snapshots
-#        - mvn versions:commit
-        - mvn -T 1C -Dmaven.test.skip=true -Drat.skip=true -DskipEnforcer -Dmaven.javadoc.skip=true -DgenerateReports=false package
         - mvn -T 2C -Dmaven.test.skip=true -Drat.skip=true -DskipEnforcer -Dmaven.javadoc.skip=true -DgenerateReports=false deploy
         - envsubst < settings.xml > ~/.m2/settings.xml
         - mvn -T 2C site
