--- a/pom.xml
+++ b/pom.xml
@@ -136,19 +136,57 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+          
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
+                <configuration>
+                    <!--<redirectTestOutputToFile>true</redirectTestOutputToFile>-->
+                    <!--<jvm>${JAVA.EXE}</jvm>-->
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                    <forkCount>4</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx256m</argLine>
+                    <parallel>methods</parallel>
+                    <threadCount>32</threadCount>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>2.18</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
+            <!--Add JavaDoc and sources to build, to go in a maven repository-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.3</version>
-                <configuration>
-                    <doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
-                    <docletArtifact>
-                        <groupId>ch.raffael.pegdown-doclet</groupId>
-                        <artifactId>pegdown-doclet</artifactId>
-                        <version>1.1</version>
-                    </docletArtifact>
-                    <useStandardDocletOptions>true</useStandardDocletOptions>
-                </configuration>
+                <!--<configuration>-->
+                <!--<doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>-->
+                <!--<docletArtifact>-->
+                <!--<groupId>ch.raffael.pegdown-doclet</groupId>-->
+                <!--<artifactId>pegdown-doclet</artifactId>-->
+                <!--<version>1.1</version>-->
+                <!--</docletArtifact>-->
+                <!--<useStandardDocletOptions>true</useStandardDocletOptions>-->
+                <!--</configuration>-->
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+
+                </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
