--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,9 @@
                 <groupId>com.github.github</groupId>
                 <artifactId>site-maven-plugin</artifactId>
                 <version>0.12</version>
+                <configuration>
+                    <message>Creating site for ${project.version}</message>
+                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.apache.maven.doxia</groupId>
@@ -126,7 +129,8 @@
                         <artifactId>maven-fluido-skin</artifactId>
                         <version>1.4</version>
                     </dependency>
-                </dependencies>                <executions>
+                </dependencies>
+                <executions>
                     <execution>
                         <goals>
                             <goal>site</goal>
