--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,17 @@
                         <artifactId>maven-fluido-skin</artifactId>
                         <version>1.4</version>
                     </dependency>
+                    <dependency>
+                        <groupId>lt.velykis.maven.skins</groupId>
+                        <artifactId>reflow-velocity-tools</artifactId>
+                        <version>1.1.1</version>
+                    </dependency>
+                    <!-- Reflow skin requires Velocity >= 1.7  -->
+                    <dependency>
+                        <groupId>org.apache.velocity</groupId>
+                        <artifactId>velocity</artifactId>
+                        <version>1.7</version>
+                    </dependency>
                 </dependencies>
             </plugin>
             <plugin>
